# bishin

./: Cargo.toml  README.md  TODO.md  grammar.pest  input.txt
.flox/: env.json
.flox/env/: manifest.toml
.flox/run/: x86_64-linux.rust.dev  x86_64-linux.rust.run
bishin-cli/: Cargo.toml
bishin-cli/src/: main.rs
bishin-cli/src/cmd/: mod.rs  run.rs
bishin-collect/: Cargo.toml
bishin-collect/src/: lib.rs
bishin-config/: Cargo.toml
bishin-config/src/: lib.rs
bishin-generate/: Cargo.toml
bishin-generate/src/: lib.rs
bishin-jobs/: Cargo.toml
bishin-jobs/src/: lib.rs
bishin-parser/: Cargo.toml
bishin-parser/src/: lib.rs
